# workroot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  llms.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-gate.yml  release.yml  verify-release.yml
docs/: agent-guide.md  architecture.md  component-inventory.md  deployment-guide.md  development-guide.md  homebrew.md  index.md  project-overview.md  source-tree-analysis.md  target-first-workflow.md
scripts/: install-workroot-shell.sh
src/: cli.rs  discovery.rs  domain.rs  error.rs  git.rs  lib.rs  lineage.rs  main.rs  prune.rs  push.rs  resolver.rs  session.rs  shell.rs  status.rs  storage.rs
src/status/: json.rs  render.rs
tests/: core_contracts.rs  git_discovery.rs  prune.rs  push.rs  resolver_shell_integration.rs  session_contracts.rs  status_release.rs  stdio_contracts.rs
tests/support/: mod.rs
