[package]
name = "workroot-cli"
version = "0.0.1"
edition = "2024"
default-run = "workroot"
description = "Machine-wide switchboard for git worktrees"
license = "MIT"
repository = "https://github.com/fridiculous/workroot"
readme = "README.md"
keywords = ["git", "worktree", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "workroot"
path = "src/lib.rs"

[[bin]]
name = "workroot"
path = "src/main.rs"

[[bin]]
name = "wr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
